adicionei h2 no index

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Essa página vai virar um site bonito :)</h1>
+    <h2>Desenvolvido para o projeto de PI - 1ADSB</h2>
 </body>
 </html>
