--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Institucional</title>
+    <title>Site Institucional</title>  
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>Essa página vai virar um site bonito :)</h1>
-    <h2>Desenvolvido para o projeto de PI - 1ADSB</h2>
+    <!-- cabeçalho ou header -->
+  <div class="header">
+      <div class="container">
+          <div class="title-header">
+          <h1>Projeto IoT Revolucionário</h1>
+        </div>
+
+          <div class="navi">
+          <!-- utilizamos <uL para criar listas e o 
+        <li> para o item das litas -->
+          <ul>
+            <li>Inicio</li>
+            <li>Sobre</li>
+            <li>Serviços</li>
+          </ul>
+        </div>
+      </div>
+  </div>
+ 
 </body>
 </html>
